--- a/www/Templets/System/Personnel/addDepartment.html
+++ b/www/Templets/System/Personnel/addDepartment.html
@@ -18,7 +18,7 @@
 						<span><em>&gt;</em>新增部门 </span>
 					</div>
 					<div class="topRight r">
-						<a href="{:U('System/Personnel/department')}" class="return">返回</a>
+						<a href="javascript:history.go(-1)" class="return">返回</a>
 					</div>
 				</div>
 				<div class="departmentCont">
@@ -40,16 +40,16 @@
 
 		<script src="__PUBLIC__/js/jquery-1.9.1.min.js"></script>
 		<script src="__PUBLIC__/js/layer/layer.js"></script>
+		<script src="__PUBLIC__/js/common.js"></script>
 		<script>
 			$(function(){
 				$('.dtSubmitBtn').click(function() {
 					var data = {
 						departmentname:$(':input[name="departmentname"]').val()
 					};
-					common_ajax(data);
+					common_ajax2(data,'/SystemApi/Department/addDepartment');
 				});
 			});
 		</script>
-		<script src="__PUBLIC__/js/common.js"></script>
 	</body>
 </html>
